@@ -1,3 +1,7 @@
+2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b7
+
+ * Fix: Avoid a single entry selectbox in album view like in 1.5.7.
+
 2008-08-12 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b6
 
  * Fix: testRequirement() was not complete.
